Source/WebCore/PlatformWinCairo.cmake
@@ -4,7 +4,6 @@ include(platform/ImageDecoders.cmake)
 include(platform/TextureMapper.cmake)
 
 list(APPEND WebCore_PRIVATE_INCLUDE_DIRECTORIES
-    "${DirectX_INCLUDE_DIRS}"
     "${WEBKIT_LIBRARIES_DIR}/include"
     "${WEBCORE_DIR}/loader/archive/cf"
     "${WEBCORE_DIR}/platform/cf"
@@ -38,9 +37,13 @@ list(APPEND WebCore_SOURCES
 )
 
 list(APPEND WebCore_LIBRARIES
-    ${DirectX_LIBRARIES}
+    D3d9
+    Mf
+    Mfplat
     comctl32
     crypt32
+    dxva2
+    evr
     iphlpapi
     rpcrt4
     shlwapi
